[#2375] Fix the display of the package_grid.html
Floated items were getting caught on the previous row if the heights
varied too much.

--- a/ckan/public/base/less/module.less
+++ b/ckan/public/base/less/module.less
@@ -162,6 +162,10 @@
   position: relative;
 }
 
+.module-item.first {
+  clear: left;
+}
+
 // GROUP
 
 .group .content img {
